<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:key="pref_nickname"
                        android:title="@string/pref_nickname_title"
                        android:defaultValue=""
                        android:dialogTitle="@string/pref_nickname_edit_title"
                        android:summary="@string/empty"/>
    <CheckBoxPreference android:key="pref_alert_switch"
                      android:title="@string/pref_alert_title"
                      android:defaultValue="true"/>
    <CheckBoxPreference android:key="pref_shake_switch"
                      android:title="@string/pref_shake_title"
                      android:defaultValue="true"/>
    <CheckBoxPreference android:key="pref_sound_switch"
                      android:title="@string/pref_sound_title"
                      android:defaultValue="true"/>
    <CheckBoxPreference android:key="pref_analysis_switch"
                      android:title="@string/pref_analysis_title"
                      android:defaultValue="true"/>
</PreferenceScreen>