<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".Search">
    <item android:id="@+id/action_news"
          android:title="@string/action_news"
          app:showAsAction="never" />
    <item android:id="@+id/action_settings"
          android:orderInCategory="100"
          android:title="@string/action_settings"
          app:showAsAction="never" />
    <!--<item android:id="@+id/action_personal"
          android:orderInCategory="101"
          android:title="@string/action_personal"
          app:showAsAction="never" />
    <item android:id="@+id/action_want"
          android:orderInCategory="102"
          android:title="@string/action_want"
          app:showAsAction="never" />
    <item android:id="@+id/action_analysis"
          android:orderInCategory="103"
          android:title="@string/action_analysis"
          app:showAsAction="never" />-->
    <item android:id="@+id/action_logout"
          android:orderInCategory="200"
          android:title="@string/action_logout"
          app:showAsAction="never" />
</menu>
