<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.RecyclerView
            android:id="@+id/DeviceList"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:padding="10dp">
    </android.support.v7.widget.RecyclerView>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/RecommendDeviceList"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:padding="10dp">
    </android.support.v7.widget.RecyclerView>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/HistoryDeviceList"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:padding="10dp">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="bottom">
        <Button
                android:id="@+id/SearchShowDev"
                style="@style/Theme.MyTheme.ActionButton.Active"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/devBtn"/>
        <Button
                android:id="@+id/RecommendShowDev"
                style="@style/Theme.MyTheme.ActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/RecBtn"/>

        <Button
                android:id="@+id/FindShowDev"
                style="@style/Theme.MyTheme.ActionButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hisBtn"/>

    </LinearLayout>
</LinearLayout>